@@ -1,5 +1,5 @@
 /*
- * Copyright © 2017-2019 Inria.  All rights reserved.
+ * Copyright © 2017-2020 Inria.  All rights reserved.
  * See COPYING in top-level directory.
  */
 
@@ -214,11 +214,13 @@ hwloc_shmem_topology_adopt(hwloc_topology_t *topologyp,
   new->support.discovery = malloc(sizeof(*new->support.discovery));
   new->support.cpubind = malloc(sizeof(*new->support.cpubind));
   new->support.membind = malloc(sizeof(*new->support.membind));
-  if (!new->support.discovery || !new->support.cpubind || !new->support.membind)
+  new->support.misc = malloc(sizeof(*new->support.misc));
+  if (!new->support.discovery || !new->support.cpubind || !new->support.membind || !new->support.misc)
     goto out_with_support;
   memcpy(new->support.discovery, old->support.discovery, sizeof(*new->support.discovery));
   memcpy(new->support.cpubind, old->support.cpubind, sizeof(*new->support.cpubind));
   memcpy(new->support.membind, old->support.membind, sizeof(*new->support.membind));
+  memcpy(new->support.misc, old->support.misc, sizeof(*new->support.misc));
   hwloc_set_binding_hooks(new);
   /* clear userdata callbacks pointing to the writer process' functions */
   new->userdata_export_cb = NULL;
@@ -236,6 +238,7 @@ hwloc_shmem_topology_adopt(hwloc_topology_t *topologyp,
   free(new->support.discovery);
   free(new->support.cpubind);
   free(new->support.membind);
+  free(new->support.misc);
   free(new);
  out_with_components:
   hwloc_components_fini();
@@ -252,6 +255,7 @@ hwloc__topology_disadopt(hwloc_topology_t topology)
   free(topology->support.discovery);
   free(topology->support.cpubind);
   free(topology->support.membind);
+  free(topology->support.misc);
   free(topology);
 }
 
