@@ -216,4 +216,5 @@
       </object>
     </object>
   </object>
+  <support name="custom.exported_support"/>
 </topology>
