@@ -78,4 +78,5 @@
       </object>
     </object>
   </object>
+  <support name="custom.exported_support"/>
 </topology>
