@@ -80,4 +80,5 @@
       </object>
     </object>
   </object>
+  <support name="custom.exported_support"/>
 </topology>
